fix virtual keyboard overlap input box issue

--- a/app/client/templates/chat_room/chat_room.scss
+++ b/app/client/templates/chat_room/chat_room.scss
@@ -261,8 +261,5 @@
 }
 
 .inputBoxList{
-  position:fixed !important;
-  bottom:0px;
-  width:100%;
-  z-index:10;
+
 }
